# LI_Comments

./: .env.example  .gitignore  APP_OVERVIEW.md  CLAUDE.md  Makefile  README.md  RUNNING.md  agent.py  comments.py  database.py  discover.py  enrich.py  logging_setup.py  main.py  pyproject.toml  requirements.txt  start.py  start.sh  tones.py  tones.yaml  utils.py  voice-profile-template.md  voice_to_tones.py
routers/: admin.py  dashboard.py  discover.py  history.py  image_proxy.py  posted.py  tag_admin.py  tones.py
static/: style.css
templates/: _admin_main.html  _comment_block.html  _dashboard_main.html  _discover_main.html  _post_card.html  _rating.html  _tag_admin_main.html  _tones_main.html  admin.html  base.html  dashboard.html  discover.html  history.html  posted.html  tag_admin.html  tones.html
tests/: conftest.py  test_dashboard.py  test_discover.py  test_tones.py
